// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichText default 1`] = `
<div
  className="hig__rich-text"
>
  The RichText component lets me include any React children, including:
  <ul>
    <li>
      <strong>
        Any old HTML tag
      </strong>
    </li>
    <li>
      React components
    </li>
  </ul>
</div>
`;

exports[`RichText renders correctly with prop size large 1`] = `
<div
  className="hig__rich-text hig__rich-text--large"
>
  The RichText component lets me include any React children, including:
  <ul>
    <li>
      <strong>
        Any old HTML tag
      </strong>
    </li>
    <li>
      React components
    </li>
  </ul>
</div>
`;

exports[`RichText renders correctly with prop size small 1`] = `
<div
  className="hig__rich-text hig__rich-text--small"
>
  The RichText component lets me include any React children, including:
  <ul>
    <li>
      <strong>
        Any old HTML tag
      </strong>
    </li>
    <li>
      React components
    </li>
  </ul>
</div>
`;
